# qdrant-rag-mcp

./: .env.example  .gitignore  .ragignore  CHANGELOG.md  CLAUDE.md  README.md  install_global.sh  milestone_response.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-models.txt  requirements.txt  run_mcp.sh  run_tests.sh  test_pr_file.md
config/: mcp_manifest.json  server_config.json
docker/: .dockerignore  Dockerfile  README.md  docker-compose-qdrant-only.yml  docker-compose.yml  start_qdrant.sh  start_with_env.sh
docs/: claude-code-config-example.md  complete-setup-and-usage-guide.md  context-aware-guide.md  development-workflow-guide.md  enhanced-ranking-guide.md  github-integration-guide.md  github-projects-guide.md  github-token-optimization-guide.md  github-workflow-examples.md  mcp-scope-configuration-guide.md  quick-context-setup.md  rag-usage-examples.md  troubleshooting-mcp-connection.md
progressive_cache/: semantic_cache.json
scripts/: README.md  auto_indexer.py  create-release.sh  diagnose_mcp_connection.sh  disable_progressive_context.sh  download_models.sh  download_single_model.py  download_specialized_models.py  enable_progressive_context.sh  ensure_clean_startup.sh  fix_qdrant.sh  index_project.sh  manage_models.sh  qdrant-logs  qdrant-logs.py  qdrant-sessions.py  setup.sh  start-session.sh  test_github_http_api.sh  test_github_projects_http_api.sh  test_http_api.sh  toggle_progressive.sh  update-release-tags.sh
src/: __init__.py  config.py  http_server.py  qdrant_mcp_context_aware.py
tests/: README.md  conftest.py  (+23 more)
(+136 files in other folders)
